branches/0.6/src/objects/PeopleProfile__c.object
<CustomObject>
    <fields>
        <fullName>AboutMe__c</fullName>
        <label>About Me</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Aol__c</fullName>
        <label>Aol</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delicious__c</fullName>
        <label>Delicious</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <label>Facebook</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gtalk__c</fullName>
        <label>Gtalk</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomePageUrl__c</fullName>
        <label>Home Page Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linkedin__c</fullName>
        <label>Linkedin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Messages__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is to save user&apos;s message quantity</description>
        <label>Messages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <description>Current Profile Picture</description>
        <label>Picture</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skype__c</fullName>
        <label>Skype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusLastModifiedDate__c</fullName>
        <description>Status Last Modified Date</description>
        <inlineHelpText>Status Last Modified Date</inlineHelpText>
        <label>StatusLastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>People</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>YahooIM__c</fullName>
        <label>YahooIM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>changeHistoryDate__c</fullName>
        <label>changeHistoryDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>changeHistory__c</fullName>
        <label>changeHistory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isPrivate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPrivate</label>
        <type>Checkbox</type>
    </fields>
    <label>People</label>
    <nameField>
        <label>People Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>People</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>